--- a/Views/Officer/UserDetails.cshtml
+++ b/Views/Officer/UserDetails.cshtml
@@ -34,7 +34,9 @@
                                 <thead class="bg-dark text-white">
                                     <th>Officer</th>
                                     <th>Action</th>
+                                    <th>Action Taken on</th>
                                     <th>Remarks</th>
+                                    <th>Files</th>
                                 </thead>
                                 <tbody id="previousActions"></tbody>
                             </table>
@@ -63,6 +65,9 @@
                         <select name="action" id="action" class="form-select">
                         </select>
                         <div id="extra" style="max-height:240px;overflow-y:auto">
+
+                        </div>
+                        <div id="extraDetails">
 
                         </div>
                         <div id="ceritificateDetails" class="shadow rounded-border p-3" style="display: none;">
