--- a/Views/Officer/Index.cshtml
+++ b/Views/Officer/Index.cshtml
@@ -77,50 +77,97 @@
     <div class="container-fluid mt-2" id="listTable" style="display: none;">
         <div class="container center-align gap-2 mb-2" id="containerSwitcher" style="display: none;">
             <button class="btn btn-dark" id="mainButton">Inbox</button>
+            <button class="btn btn-secondary" id="approveButton">Approve List</button>
             <button class="btn btn-secondary" id="poolButton">Pool</button>
         </div>
-        <div id="mainContainer" class="container-fluid">
-            <table class="table table-striped table-hover table-bordered" id="applicationsTable">
-                <thead class="bg-dark text-white">
-                    <tr>
-                        <th scope="col">#</th>
-                        <th scope="col" class="">
-                            <span class="d-flex gap-2">
-                                <input type="checkbox" class="form-check d-flex parent-pool" /><span>Pool</span>
-                            </span>
-                        </th>
-                        <th scope="col">Reference Number <i class="fa-solid fa-sort"></i></th>
-                        <th scope="col">Applicant Name <i class="fa-solid fa-sort"></i></th>
-                        <th scope="col">Applicant Submission Date <i class="fa-solid fa-sort"></i></th>
-                        <th scope="col">Action</th>
-                    </tr>
-                </thead>
-                <tbody id="tbody"></tbody>
-            </table>
-        </div>
-        <div id="PoolContainer" class="container" style="display: none;">
-            <table class="table table-striped table-hover table-bordered" id="poolTable">
-                <thead class="bg-dark text-white">
-                    <tr>
-                        <th scope="col">#</th>
-                        <th scope="col" class="">
-                            <span class="d-flex gap-2">
-                                <input type="checkbox" class="form-check d-flex poolList-parent" /><span>Pool</span>
-                            </span>
-                        </th>
-                        <th scope="col">Reference Number <i class="fa-solid fa-sort"></i></th>
-                        <th scope="col">Applicant Name <i class="fa-solid fa-sort"></i></th>
-                    </tr>
-                </thead>
-                <tbody id="poolArray">
-                </tbody>
-            </table>
-
-            <div class="d-flex gap-2 justify-content-center mt-5">
-                <button class="btn btn-dark d-flex" id="sanctionAll" disabled>Sanction All</button>
-                <button class="btn btn-dark d-flex" id="transferBack" disabled>Transfer Back to Inbox</button>
+        <div class="container-fluid d-flex justify-content-end mb-2">
+            <div id="optionButtons">
+                <button class="btn btn-info" onclick="printTable('printableArea')">Print</button>
+                <button class="btn btn-success" onclick="exportTableToExcel('applicationsTable')">EXCEL</button>
+                <button class="btn btn-danger" onclick="SaveAsPdf('printableArea','applicationsTable')">PDF</button>
             </div>
+        </div>
+        <div class="container-fluid" id="printableArea">
+            <div id="mainContainer" class="container-fluid">
+                <table class="table table-striped table-hover table-bordered" id="applicationsTable">
+                    <thead class="bg-dark text-white">
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col" class="">
+                                <span class="d-flex gap-2">
+                                    <input type="checkbox" class="form-check d-flex pending-parent" /><span></span>
+                                </span>
+                            </th>
+                            <th scope="col">Reference Number <i class="fa-solid fa-sort"></i></th>
+                            <th scope="col">Applicant Name <i class="fa-solid fa-sort"></i></th>
+                            <th scope="col">Date Of Marriage <i class="fa-solid fa-sort"></i></th>
+                            <th scope="col">Applicant Submission Date <i class="fa-solid fa-sort"></i></th>
+                            <th scope="col">Action</th>
+                        </tr>
+                    </thead>
+                    <tbody id="tbody"></tbody>
+                </table>
+            </div>
+            <div id="ApproveContainer" class="container-fluid" style="display: none;">
+                <table class="table table-striped table-hover table-bordered" id="approveTable">
+                    <thead class="bg-dark text-white">
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col" class="">
+                                <span class="d-flex gap-2">
+                                    <input type="checkbox" class="form-check d-flex approve-parent" /><span></span>
+                                </span>
+                            </th>
+                            <th scope="col">Reference Number <i class="fa-solid fa-sort"></i></th>
+                            <th scope="col">Applicant Name <i class="fa-solid fa-sort"></i></th>
+                            <th scope="col">Applied To District <i class="fa-solid fa-sort"></i></th>
+                            <th scope="col">Parentage <i class="fa-solid fa-sort"></i></th>
+                            <th scope="col">Mother's Name <i class="fa-solid fa-sort"></i></th>
+                            <th scope="col">Date Of Birth <i class="fa-solid fa-sort"></i></th>
+                            <th scope="col">Date Of Marriage <i class="fa-solid fa-sort"></i></th>
+                            <th scope="col">Address <i class="fa-solid fa-sort"></i></th>
+                            <th scope="col">District <i class="fa-solid fa-sort"></i></th>
+                            <th scope="col">Tehsil <i class="fa-solid fa-sort"></i></th>
+                            <th scope="col">Pincode <i class="fa-solid fa-sort"></i></th>
+                            <th scope="col">Submission Date <i class="fa-solid fa-sort"></i></th>
+                        </tr>
+                    </thead>
+                    <tbody id="approveArray">
+                    </tbody>
+                </table>
 
+                <div class="d-flex gap-2 justify-content-center mt-5">
+                    <button class="btn btn-dark d-flex" id="transferToPoolButton" disabled>Transfer To Pool</button>
+                    <button class="btn btn-dark d-flex" id="transferBackFromApprove" disabled>Transfer Back to
+                        Inbox</button>
+                </div>
+
+            </div>
+            <div id="PoolContainer" class="container-fluid" style="display: none;">
+                <table class="table table-striped table-hover table-bordered" id="poolTable">
+                    <thead class="bg-dark text-white">
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col" class="">
+                                <span class="d-flex gap-2">
+                                    <input type="checkbox" class="form-check d-flex poolList-parent" /><span>Pool</span>
+                                </span>
+                            </th>
+                            <th scope="col">Reference Number <i class="fa-solid fa-sort"></i></th>
+                            <th scope="col">Applicant Name <i class="fa-solid fa-sort"></i></th>
+                        </tr>
+                    </thead>
+                    <tbody id="poolArray">
+                    </tbody>
+                </table>
+
+                <div class="d-flex gap-2 justify-content-center mt-5">
+                    <button class="btn btn-dark d-flex" id="sanctionAll" disabled>Sanction</button>
+                    <button class="btn btn-dark d-flex" id="transferBackFromPool" disabled>Transfer Back to
+                        Inbox</button>
+                </div>
+
+            </div>
         </div>
     </div>
 </div>
