--- a/Views/Officer/UserDetails.cshtml
+++ b/Views/Officer/UserDetails.cshtml
@@ -23,7 +23,8 @@
                             <p class="font-heading">Bank Details</p>
                         </div>
                     </div>
-                    <div class="row mt-2" id="showPreviousActions" style="display: none;">
+                    <div class="row mt-2" id="showPreviousActions"
+                        style="display: none;max-height: 200px;overflow-y: auto;">
                         <div class="col-sm-12">
                             <p class="font-heading">
                                 Previous Actions
