--- a/Views/Officer/UserDetails.cshtml
+++ b/Views/Officer/UserDetails.cshtml
@@ -33,8 +33,8 @@
                         <div class="col-sm-12">
                             <table class="table table-responsive table-bordered table-striped">
                                 <thead class="bg-dark text-white">
-                                    <th>Officer</th>
-                                    <th>Action</th>
+                                    <th>Action Taker</th>
+                                    <th>Action Taken</th>
                                     <th>Action Taken on</th>
                                     <th>Remarks</th>
                                     <th>Files</th>
