--- a/Views/Officer/Index.cshtml
+++ b/Views/Officer/Index.cshtml
@@ -81,94 +81,35 @@
                 <button class="btn btn-info" onclick="printTable('printableArea')">Print</button>
                 <button class="btn btn-success" onclick="exportTableToExcel('applicationsTable')">EXCEL</button>
                 <button class="btn btn-danger" onclick="SaveAsPdf('printableArea','applicationsTable')">PDF</button>
+                <button class="btn btn-success" id="exportAll">Export All Data</button>
             </div>
         </div>
         <div class="container-fluid" id="printableArea">
             <div id="mainContainer" class="container-fluid">
-                <table class="table table-striped table-hover table-bordered" id="applicationsTable">
-                    <thead class="bg-dark text-white">
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col" class="">
-                                <span class="d-flex gap-2">
-                                    <input type="checkbox" class="form-check d-flex pending-parent" /><span></span>
-                                </span>
-                            </th>
-                            <th scope="col">Reference Number <i class="fa-solid fa-sort"></i></th>
-                            <th scope="col">Applicant Name <i class="fa-solid fa-sort"></i></th>
-                            <th scope="col">Date Of Marriage <i class="fa-solid fa-sort"></i></th>
-                            <th scope="col">Applicant Submission Date (Days Elapsed) <i class="fa-solid fa-sort"></i>
-                            </th>
-                            <th scope="col">Action</th>
-                        </tr>
-                    </thead>
-                    <tbody id="tbody"></tbody>
-                </table>
-            </div>
-            <div id="ApproveContainer" class="container-fluid" style="display: none;">
                 <div class="table-responsive" style="overflow-x: auto;">
-                    <table class="table table-striped table-hover table-bordered" id="approveTable">
+                    <table class="table table-striped table-hover table-bordered w-100" id="applicationsTable">
                         <thead class="bg-dark text-white">
-                            <tr>
-                                <th scope="col">#</th>
-                                <th scope="col" class="">
-                                    <span class="d-flex gap-2">
-                                        <input type="checkbox" class="form-check d-flex approve-parent" /><span></span>
-                                    </span>
-                                </th>
-                                <th scope="col">Reference Number <i class="fa-solid fa-sort"></i></th>
-                                <th scope="col">Applicant Name <i class="fa-solid fa-sort"></i></th>
-                                <th scope="col">Applied To District <i class="fa-solid fa-sort"></i></th>
-                                <th scope="col">Parentage <i class="fa-solid fa-sort"></i></th>
-                                <th scope="col">Mother's Name <i class="fa-solid fa-sort"></i></th>
-                                <th scope="col">Date Of Birth <i class="fa-solid fa-sort"></i></th>
-                                <th scope="col">Date Of Marriage <i class="fa-solid fa-sort"></i></th>
-                                <th scope="col">Bank Details (Bank Name/IFSC Code/Account Number)<i
-                                        class="fa-solid fa-sort"></i></th>
-                                <th scope="col">Address <i class="fa-solid fa-sort"></i></th>
-                                <th scope="col">Submission Date (Days Elapsed)<i class="fa-solid fa-sort"></i></th>
-                            </tr>
                         </thead>
-                        <tbody id="approveArray">
-                        </tbody>
+                        <tbody id="tbody"></tbody>
                     </table>
                 </div>
-
-                <div class="d-flex gap-2 justify-content-center mt-5">
+                <div id="MainContainer" class="d-none gap-2 justify-content-center mt-5">
+                    <button class="btn btn-dark d-flex mx-auto" id="transferToApproveButton" disabled>
+                        Transfer To Approve List
+                    </button>
+                </div>
+                <div id="ApproveContainer" class="d-none gap-2 justify-content-center mt-5">
                     <button class="btn btn-dark d-flex" id="transferToPoolButton" disabled>Transfer To Pool</button>
                     <button class="btn btn-dark d-flex" id="transferBackFromApprove" disabled>Transfer Back to
                         Inbox</button>
                 </div>
-
-            </div>
-            <div id="PoolContainer" class="container-fluid" style="display: none;">
-                <table class="table table-striped table-hover table-bordered" id="poolTable">
-                    <thead class="bg-dark text-white">
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col" class="">
-                                <span class="d-flex gap-2">
-                                    <input type="checkbox" class="form-check d-flex poolList-parent" /><span>Pool</span>
-                                </span>
-                            </th>
-                            <th scope="col">Reference Number <i class="fa-solid fa-sort"></i></th>
-                            <th scope="col">Applicant Name <i class="fa-solid fa-sort"></i></th>
-                            <th scope="col">Date Of Marriage <i class="fa-solid fa-sort"></i></th>
-                            <th scope="col">Date Of Submission (Days Elapsed) <i class="fa-solid fa-sort"></i></th>
-                        </tr>
-                    </thead>
-                    <tbody id="poolArray">
-                    </tbody>
-                </table>
-
-                <div class="d-flex gap-2 justify-content-center mt-5">
+                <div id="PoolContainer" class="d-none gap-2 justify-content-center mt-5">
                     <button class="btn btn-dark d-flex" id="sanctionAll" disabled>Sanction</button>
                     <button class="btn btn-dark d-flex" id="transferBackFromPool" disabled>Transfer Back to
                         Inbox</button>
                     <button class="btn btn-dark d-flex" id="transferBackToInbox" disabled>Transfer Back to
                         Approve List</button>
                 </div>
-
             </div>
         </div>
     </div>
