--- a/Views/Officer/Index.cshtml
+++ b/Views/Officer/Index.cshtml
@@ -85,15 +85,13 @@
             </div>
         </div>
         <div class="container-fluid" id="printableArea">
-            <div id="mainContainer" class="container-fluid">
-                <div class="table-responsive" style="overflow-x: auto;">
-                    <table class="table table-striped table-hover table-bordered w-100" id="applicationsTable">
-                        <thead class="bg-dark text-white">
-                        </thead>
-                        <tbody id="tbody"></tbody>
-                    </table>
+            <div id="mainContainer" class="container-fluid mb-5">
+                <div id="SanctionContainer" class="d-none justify-content-center">
+                    <button class="btn btn-dark d-flex mx-auto" id="sendToBank">
+                        Send To Bank
+                    </button>
                 </div>
-                <div id="MainContainer" class="d-none gap-2 justify-content-center mt-5">
+                <div id="MainContainer" class="d-none justify-content-center">
                     <button class="btn btn-dark d-flex mx-auto" id="transferToApproveButton" disabled>
                         Transfer To Approve List
                     </button>
@@ -110,6 +108,14 @@
                     <button class="btn btn-dark d-flex" id="transferBackToInbox" disabled>Transfer Back to
                         Approve List</button>
                 </div>
+                <div class="table-responsive" style="overflow-x: auto;">
+                    <table class="table table-striped table-hover table-bordered w-100" id="applicationsTable">
+                        <thead class="bg-dark text-white">
+                        </thead>
+                        <tbody id="tbody"></tbody>
+                    </table>
+                </div>
+
             </div>
         </div>
     </div>
@@ -131,6 +137,31 @@
                 </div>
             </div>
 
+        </div>
+    </div>
+</div>
+
+<div class="modal" id="ftpCredentials" tabindex="-1">
+    <div class="modal-dialog modal-xl modal-dialog-centered">
+        <div class="modal-content w-50 mx-auto">
+            <!-- Modal Header -->
+            <div class="modal-header">
+                FTP Credentials
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <!-- Modal body -->
+            <div class="modal-body">
+                <div class="container-fluid" id="ftpForm">
+                    <div class="container d-flex flex-column gap-4 mb-2">
+                        <input class="form-control" type="text" name="ftpHost" id="ftpHost" placeholder="FTP Host">
+                        <input class="form-control" type="text" name="ftpUser" id="ftpUser" placeholder="FTP User">
+                        <input class="form-control" type="password" name="ftpPassword" id="ftpPassword"
+                            placeholder="FTP Password">
+                    </div>
+
+                    <button class="btn btn-dark d-flex mx-auto" id="send">Send</button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
