I have no idea at all

--- a/Views/User/ApplicationStatus.cshtml
+++ b/Views/User/ApplicationStatus.cshtml
@@ -25,17 +25,20 @@
             <div class="modal-body">
                 <div class="container">
                     <div class="row mb-3 center-align">
-                        <table class="table table-bordered table-responsive table-striped">
-                            <thead class="bg-dark text-white">
-                                <th>Received On</th>
-                                <th>Officer</th>
-                                <th>Action Taken</th>
-                                <th>Remarks</th>
-                            </thead>
-                            <tbody id="timeline">
+                        <div class="table-responsive">
+                            <table class="table table-bordered  table-striped">
+                                <thead class="bg-dark text-white">
+                                    <th>Received On</th>
+                                    <th>Officer</th>
+                                    <th>Action Taken</th>
+                                    <th>Remarks</th>
+                                </thead>
+                                <tbody id="timeline">
 
-                            </tbody>
-                        </table>
+                                </tbody>
+                            </table>
+                        </div>
+
                     </div>
                 </div>
             </div>
