Changed Phase Logic and Made DSC Possible

--- a/Views/Admin/Dashboard.cshtml
+++ b/Views/Admin/Dashboard.cshtml
@@ -136,24 +136,26 @@
         </div>
 
         <div id="printableArea">
-            <table class="table table-responsive table-bordered table-striped" id="applicationListTable">
-                <thead class="bg-dark text-white">
-                    <tr>
-                        <th>S.No.</th>
-                        <th>Application Number</th>
-                        <th>Applicant Name</th>
-                        <th>Application Status</th>
-                        <th>Applied District</th>
-                        <th>Applied Service</th>
-                        <th>Application Currently With</th>
-                        <th>Application Received On</th>
-                        <th>Application Submission Date</th>
-                    </tr>
-                </thead>
-                <tbody id="applicationListContainer">
+            <div class="table-responsive">
+                <table class="table  table-bordered table-striped" id="applicationListTable">
+                    <thead class="bg-dark text-white">
+                        <tr>
+                            <th>S.No.</th>
+                            <th>Application Number</th>
+                            <th>Applicant Name</th>
+                            <th>Application Status</th>
+                            <th>Applied District</th>
+                            <th>Applied Service</th>
+                            <th>Application Currently With</th>
+                            <th>Application Received On</th>
+                            <th>Application Submission Date</th>
+                        </tr>
+                    </thead>
+                    <tbody id="applicationListContainer">
 
-                </tbody>
-            </table>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
