--- a/Views/User/IncompleteApplications.cshtml
+++ b/Views/User/IncompleteApplications.cshtml
@@ -49,6 +49,6 @@
 
 
 <script>
-    const applications = @Html.Raw(Json.Serialize(Model));
+    const ApplicationType = "Incomplete";
 </script>
 <script src="/js/User/applicationStatus.js"></script>
