--- a/Views/Officer/Index.cshtml
+++ b/Views/Officer/Index.cshtml
@@ -87,8 +87,8 @@
         <div class="container-fluid" id="printableArea">
             <div id="mainContainer" class="container-fluid mb-5">
                 <div id="SanctionContainer" class="d-none justify-content-center">
-                    <button class="btn btn-dark d-flex mx-auto" id="sendToBank">
-                        Send To Bank
+                    <button class="btn btn-dark d-flex mx-auto" id="generateBankFile">
+                        Generate Bank File
                     </button>
                 </div>
                 <div id="MainContainer" class="d-none justify-content-center">
@@ -151,7 +151,18 @@
             </div>
             <!-- Modal body -->
             <div class="modal-body">
-                <div class="container-fluid" id="ftpForm">
+                <div class="container-fluid" id="bankFileContainer">
+                    <div id="progress-container" style="display:none;">
+                        <h3>Processing...</h3>
+                        <div class="progress">
+                            <div id="progress-bar" class="progress-bar" role="progressbar" aria-valuemin="0"
+                                aria-valuemax="100" aria-valuenow="0" style="width: 0%;">
+                                0%
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="container-fluid" id="ftpForm" style="display: none;">
                     <div class="container d-flex flex-column gap-4 mb-2">
                         <input class="form-control" type="text" name="ftpHost" id="ftpHost" placeholder="FTP Host">
                         <input class="form-control" type="text" name="ftpUser" id="ftpUser" placeholder="FTP User">
