--- a/Views/User/ApplicationStatus.cshtml
+++ b/Views/User/ApplicationStatus.cshtml
@@ -1,17 +1,19 @@
 <div class="full-screen-section center-align flex-column">
-    <div class="container">
-        <table class="table table-striped table-hover table-bordered" id="statusTable">
-            <thead class="bg-dark text-white">
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Reference Number <i class="fa-solid fa-sort"></i></th>
-                    <th scope="col">Applicant Name <i class="fa-solid fa-sort"></i></th>
-                    <th scope="col">Option</th>
-                </tr>
-            </thead>
-            <tbody id="userDetails">
-            </tbody>
-        </table>
+    <div class="container-fluid w-75 mx-auto">
+        <div class="table-responsive">
+            <table class="table table-striped table-hover table-bordered" id="statusTable">
+                <thead class="bg-dark text-white">
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Reference Number <i class="fa-solid fa-sort"></i></th>
+                        <th scope="col">Applicant Name <i class="fa-solid fa-sort"></i></th>
+                        <th scope="col">Option</th>
+                    </tr>
+                </thead>
+                <tbody id="userDetails">
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
 
@@ -69,8 +71,9 @@
 </div>
 
 <script>
-    const applications = @Html.Raw(Json.Serialize(Model));
+    @* const applications = @Html.Raw(Json.Serialize(Model)); *@
+    const ApplicationType = "ApplicationStatus";
+
 </script>
-<script src="/js/pagination.js"></script>
 <script src="/js/formvalidations.js"></script>
 <script src="/js/User/applicationStatus.js"></script>
