--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,10 +1,10 @@
-html,
 body {
     scroll-behavior: smooth;
     font-family: Metropolis, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
     height: 100%;
     margin: 0;
     padding: 0;
+    top: 0px !important;
 }
 
 .margin-center {
