--- a/Views/Officer/Index.cshtml
+++ b/Views/Officer/Index.cshtml
@@ -55,7 +55,18 @@
                     <p class="text-center fs-4 fw-bold">Rejected Applications</p>
                 </div>
             </div>
-
+            <div class="col-md-3 mt-2">
+                <div class="card border-0 p-3 py-5 rounded-border"
+                    style="cursor: pointer;background-color: #06d4df;color:#fff" data-bs-toggle="tooltip"
+                    data-bs-placement="top">
+                    <div class="center-align gap-4">
+                        <i class="fas fa-times-circle fs-1"></i>
+                        <p class="text-center fs-1 value my-auto" id="pendingWithCitizen">0</p>
+                    </div>
+                    <p class="text-center fs-4 fw-bold">Pending With Citizens</p>
+                </div>
+            </div>
+            
             <div class="col-md-3 mt-2">
                 <div class="card border-0 p-3 py-5 rounded-border"
                     style="cursor: pointer;background-color: #FD7E14;color:#fff" data-bs-toggle="tooltip"
