--- a/Views/Shared/Navbar.cshtml
+++ b/Views/Shared/Navbar.cshtml
@@ -23,4 +23,5 @@
 <script>
     var userType = @Html.Raw(Json.Serialize(ViewData["UserType"]));
     var userName = @Html.Raw(Json.Serialize(ViewData["UserName"]));
+    var profile = @Html.Raw(Json.Serialize(ViewData["Profile"]));
 </script>
