--- a/Views/User/Acknowledgement.cshtml
+++ b/Views/User/Acknowledgement.cshtml
@@ -1,6 +1,5 @@
-<div class="full-screen-section center-align flex-column">
-
-    <div class="container center-align flex-column shadow rounded-border p-3">
+<div class="full-screen-section center-align flex-column" style="height: 120vh;">
+    <div class="container center-align flex-column shadow rounded-border p-3" style="border:2px solid black">
         <img src="/resources/emblem.png" alt="Emblem" class="img-fluid" style="height: 100px;width:100px;">
         <p class="fs-3 fw-bold">Union Teritory of Jammu and Kashmir</p>
         <p class="fs-4 fw-bold">Acknowledgement</p>
